Version 2.2.1 - Hearts Desire
----------------------------------
Core - General
 - Improve the smarty plugin loading to handle non-cachable plugins in the /assets/plugins and /plugins directories. 
 - Fixes to transaction functions in database abstraction library.

Installation Assistant v1.3.1 
 - On upgrade to 2.2.1 move all files from /plugins to /assets/plugins (they should only be third party plugins at this point)
 - On upgrade chmod the config.php to 444

MicroTiny v2.1.1
 - Fix temporary JS call URL.

News v2.51.1
 - Fix frontend pagination


Version 2.2 - Canada
----------------------------------
Core - General
  - Automatically turn on file locking for cached files to attempt to mitigate race conditions.
    NOTE:  On systems using archaic filesystems such as FAT and FAT32 CMSMS may no longer operate.
  - cms_filecache_driver now caches for 2 hours by default and has an improved cooperative locking test
  - Implement new database abstraction library that is compatible with (functionality wise) but improves upon adodb-lite.
  - Implement protocol-less URL's in the config.
  - Page tabs are now focusable (you can tab through page tabs and use enter to select one).
  - Minor fix to the {form_start} plugin.
  - Minor change to the {admin_icon} plugin (default image class).
  - Cache more items that are queried from the database, to reduce mysql load.
  - Minor change to tree operations functionality to reduce memory usage.
  - Fixed problem with order of content blocks when using {content_module} stuff.
  - Adds get_usage_string and the concept of a type assistant to template types.
  - Minor change to auto-alias determination routine.
  - Detect module_custom enhancements in the CmsModuleInfo stuff.
  - Refactor Admin authentication.
  - More fixes to the cms_url class.
  - Optimize the include.php file.
  - Adds built-in asynchronous task processing system.
  - Adds the ability to reduce redundant mentions in the Admin log (runs asynchronously).