@@ -3,6 +3,8 @@ Version 2.2.1 - Hearts Desire
 Core - General
  - Improve the smarty plugin loading to handle non-cachable plugins in the /assets/plugins and /plugins directories. 
  - Fixes to transaction functions in database abstraction library.
+ - Fix CMSModule::GetTemplateResource to no longer accept eval or string resources.
+ - Fix CMSSmartySecurityPolicy so that debug_to_log is no longer an allowed function.
 
 Installation Assistant v1.3.1 
  - On upgrade to 2.2.1 move all files from /plugins to /assets/plugins (they should only be third party plugins at this point)
